tests/regression/errors/basic/syntax_error_6.csd
// Syntax error test 6 - missing semicolon
sus x drip = 6
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
